# toks-bench

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt  run-live-sweep.sh  run-lowbit-sweep.sh  run-ollama-sweep.sh  run-sequential-gpu-sweep.sh  run-spark-models-sweep.sh  start-vllm-nematron-8001.sh
.github/workflows/: security.yml
scripts/: download-all-dgx-models.sh  download-lowbit-2026-curl.sh  download-lowbit-2026.sh  download-spark-models.sh  generate_dashboard.py  install-trtllm.sh  manage-default-llama-server.sh  run-triton-vllm-qwen3-4b.sh  run-trtllm-qwen3-4b.sh  run-vllm-nematron-3-nano-30b.sh  run-vllm-qwen3-4b.sh
tests/: test_cli.py  test_config.py  test_metrics.py  test_providers.py  test_security.py
toks_bench/: __init__.py  bench.py  charts.py  cli.py  config.py  metrics.py  profiling_report.py  providers.py  security.py
triton_model_repository/qwen3-4b-instruct-2507/: config.pbtxt
triton_model_repository/qwen3-4b-instruct-2507/1/: model.json
