[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toks-bench"
version = "0.1.0"
description = "Reproducible token-throughput benchmark for OpenAI-compatible LLM servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai==2.44.0",
    "pyyaml==6.0.3",
    "tabulate==0.9.0",
    "matplotlib==3.11.0",
    "pandas==3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.0",
    "pytest-asyncio==0.26.0",
    "respx==0.22.0",
    "ruff==0.12.0",
    "basedpyright==1.32.0",
    "bandit[toml]==1.9.2",
    "pip-audit==2.10.0",
]

[project.scripts]
toks-bench = "toks_bench.cli:main"
toks-bench-aggregate = "toks_bench.cli:aggregate_cli"
toks-bench-profile = "toks_bench.profiling_report:profiling_report_cli"
toks-bench-chart = "toks_bench.charts:charts_cli"

[tool.hatch.build.targets.wheel]
packages = ["toks_bench"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "S"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
